--- a/TopReview/ViewControllers/Base.lproj/Main.storyboard
+++ b/TopReview/ViewControllers/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                                 <rect key="frame" x="0.0" y="88" width="375" height="724"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ratingCell" rowHeight="200" id="b6W-LQ-NTI" customClass="ReviewCell" customModule="TopReview" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReviewCell" rowHeight="200" id="b6W-LQ-NTI" customClass="ReviewCell" customModule="TopReview" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="b6W-LQ-NTI" id="lhu-l9-VgJ">
@@ -100,15 +100,8 @@
                                                             </attributedString>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zZf-8z-Elm">
-                                                            <rect key="frame" x="297" y="145.33333333333334" width="30" height="30"/>
-                                                            <state key="normal" title="Yes"/>
-                                                            <connections>
-                                                                <action selector="helpfulButtonPressed:" destination="b6W-LQ-NTI" eventType="touchUpInside" id="v3E-NG-bag"/>
-                                                            </connections>
-                                                        </button>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Was this helpful?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iWw-Gr-BqK">
-                                                            <rect key="frame" x="180" y="152.33333333333334" width="117" height="15.666666666666657"/>
+                                                            <rect key="frame" x="166" y="152.33333333333334" width="117" height="15.666666666666657"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -119,24 +112,40 @@
                                                             <color key="textColor" red="0.66667580604553223" green="0.66665023565292358" blue="0.66666758060455322" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zZf-8z-Elm">
+                                                            <rect key="frame" x="287" y="150.33333333333334" width="40" height="20"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="5um-0q-Qno"/>
+                                                                <constraint firstAttribute="height" constant="20" id="WRq-Wg-6ts"/>
+                                                            </constraints>
+                                                            <state key="normal" title="Yes"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiusV">
+                                                                    <real key="value" value="5"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
+                                                            <connections>
+                                                                <action selector="helpfulButtonPressed:" destination="b6W-LQ-NTI" eventType="touchUpInside" id="v3E-NG-bag"/>
+                                                            </connections>
+                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.94117647058823528" green="0.94509803921568625" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <constraints>
+                                                        <constraint firstItem="zZf-8z-Elm" firstAttribute="centerY" secondItem="iWw-Gr-BqK" secondAttribute="centerY" id="0zF-QB-x92"/>
+                                                        <constraint firstAttribute="trailing" secondItem="zZf-8z-Elm" secondAttribute="trailing" constant="16" id="16G-Zh-DDL"/>
+                                                        <constraint firstItem="iWw-Gr-BqK" firstAttribute="top" secondItem="O9R-Bv-PmP" secondAttribute="bottom" constant="8.0000000000000284" id="1DV-VL-z1m"/>
                                                         <constraint firstItem="3Rv-mk-YbV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="VRv-8c-BB5" secondAttribute="trailing" constant="8" symbolic="YES" id="8wS-ZS-Q4j"/>
                                                         <constraint firstItem="Skl-Va-CWS" firstAttribute="leading" secondItem="rYu-WF-YGi" secondAttribute="leading" constant="16" id="CLq-UJ-kjO"/>
-                                                        <constraint firstItem="zZf-8z-Elm" firstAttribute="leading" secondItem="iWw-Gr-BqK" secondAttribute="trailing" id="IHW-Xi-gph"/>
+                                                        <constraint firstAttribute="bottom" secondItem="iWw-Gr-BqK" secondAttribute="bottom" constant="16" id="Cad-cs-INI"/>
                                                         <constraint firstItem="O9R-Bv-PmP" firstAttribute="firstBaseline" secondItem="DeE-GD-5nz" secondAttribute="baseline" constant="20" symbolType="layoutAnchor" id="Ih4-c9-lfn"/>
                                                         <constraint firstItem="VRv-8c-BB5" firstAttribute="top" secondItem="Skl-Va-CWS" secondAttribute="bottom" constant="12" id="LNN-dX-cU1"/>
                                                         <constraint firstItem="VRv-8c-BB5" firstAttribute="leading" secondItem="rYu-WF-YGi" secondAttribute="leading" constant="16" id="Mlk-Jv-YJI"/>
                                                         <constraint firstItem="O9R-Bv-PmP" firstAttribute="leading" secondItem="rYu-WF-YGi" secondAttribute="leading" constant="16" id="NV1-SF-mPV"/>
                                                         <constraint firstAttribute="trailing" secondItem="3Rv-mk-YbV" secondAttribute="trailing" constant="16" id="PMs-fq-R6E"/>
-                                                        <constraint firstItem="iWw-Gr-BqK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="rYu-WF-YGi" secondAttribute="leading" constant="20" symbolic="YES" id="SHd-x7-sb4"/>
-                                                        <constraint firstAttribute="trailing" secondItem="zZf-8z-Elm" secondAttribute="trailing" constant="16" id="STR-Ab-lXk"/>
-                                                        <constraint firstAttribute="bottom" secondItem="iWw-Gr-BqK" secondAttribute="bottom" constant="16" id="Xx9-sw-vGD"/>
+                                                        <constraint firstItem="zZf-8z-Elm" firstAttribute="leading" secondItem="iWw-Gr-BqK" secondAttribute="trailing" constant="4" id="Xov-Bt-IAc"/>
                                                         <constraint firstItem="3Rv-mk-YbV" firstAttribute="centerY" secondItem="VRv-8c-BB5" secondAttribute="centerY" id="Ycf-dE-xew"/>
-                                                        <constraint firstItem="iWw-Gr-BqK" firstAttribute="top" secondItem="O9R-Bv-PmP" secondAttribute="bottom" constant="8" id="git-fA-5W8"/>
+                                                        <constraint firstItem="iWw-Gr-BqK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="rYu-WF-YGi" secondAttribute="leading" constant="20" symbolic="YES" id="ggs-Pp-tu5"/>
                                                         <constraint firstItem="DeE-GD-5nz" firstAttribute="top" secondItem="VRv-8c-BB5" secondAttribute="bottom" constant="12" id="hkS-Ng-xX7"/>
-                                                        <constraint firstItem="zZf-8z-Elm" firstAttribute="centerY" secondItem="iWw-Gr-BqK" secondAttribute="centerY" id="l0B-B8-3ls"/>
                                                         <constraint firstAttribute="trailing" secondItem="DeE-GD-5nz" secondAttribute="trailing" constant="16" id="lAJ-Dm-2Du"/>
                                                         <constraint firstAttribute="trailing" secondItem="Skl-Va-CWS" secondAttribute="trailing" constant="16" id="mmq-lF-bNg"/>
                                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="O9R-Bv-PmP" secondAttribute="trailing" constant="16" id="uZl-Wf-mfK"/>
@@ -179,6 +188,10 @@
                                     <outlet property="delegate" destination="8rJ-Kc-sve" id="aUu-b8-3LW"/>
                                 </connections>
                             </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="M0a-D7-xZA">
+                                <rect key="frame" x="177" y="396" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -191,6 +204,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Ratings &amp; Reviews" id="3fE-Vl-Uln"/>
                     <connections>
+                        <outlet property="indicatorView" destination="M0a-D7-xZA" id="86E-nj-N1t"/>
                         <outlet property="tableView" destination="rg1-ea-kKi" id="joa-fZ-SUp"/>
                     </connections>
                 </viewController>
